Add conclusion and future work

--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2d03f4ca",
+   "id": "da68e30f",
    "metadata": {},
    "outputs": [
     {
@@ -59,6 +59,16 @@
    "outputs": [],
    "source": [
     "feat = pd.read_csv('data/UNSW_NB15_features.csv', encoding='cp1252')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "eb8f27ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### EXPLORATORY DATA ANALYSIS #####"
    ]
   },
   {
@@ -2315,6 +2325,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8c240f39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##### SCIKIT LEARN #####"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "id": "29050f9e",
    "metadata": {},
@@ -3141,6 +3161,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##### AUTOGLUON #####\n",
+    "\n",
     "# import os\n",
     "# os.environ['KMP_DUPLICATE_LIB_OK']='True'"
    ]
@@ -5120,7 +5142,7 @@
    "source": [
     "##### KERAS #####\n",
     "\n",
-    "# The following 3 models are guided by work done from a Kaggle contributor here: https://www.kaggle.com/code/carlkirstein/unsw-nb15-modelling-97-7\n",
+    "# The following models are guided by work done from a Kaggle contributor here: https://www.kaggle.com/code/carlkirstein/unsw-nb15-modelling-97-7\n",
     "\n",
     "# The models were used for baseline accuracy and the architecture experimented with in an attempt to reach higher accuracy\n"
    ]
