--- a/EAI6980 Final Project AutoML - Autogluon.ipynb
+++ b/EAI6980 Final Project AutoML - Autogluon.ipynb
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "de3e66cc",
+   "id": "d7132d19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "889d67e5",
+   "id": "4c3710ec",
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0e731711",
+   "id": "ac080329",
    "metadata": {},
    "outputs": [
     {
@@ -1294,8 +1294,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "dca8ad15",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Computing feature importance via permutation shuffling for 42 features using 5000 rows with 5 shuffle sets...\n",
+      "\t14.51s\t= Expected runtime (2.9s per shuffle set)\n",
+      "\t10.3s\t= Actual runtime (Completed 5 of 5 shuffle sets)\n"
+     ]
+    }
+   ],
+   "source": [
+    "importances = predictor.feature_importance(testing_set, feature_stage='transformed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "173888ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sttl                 2.700400e-01\n",
+       "proto                7.156000e-02\n",
+       "ct_dst_src_ltm       4.120000e-03\n",
+       "ct_dst_ltm           2.080000e-03\n",
+       "ct_src_ltm           1.240000e-03\n",
+       "dtcpb                9.600000e-04\n",
+       "sjit                 3.600000e-04\n",
+       "dttl                 2.400000e-04\n",
+       "trans_depth          8.000000e-05\n",
+       "ct_ftp_cmd           4.000000e-05\n",
+       "spkts                4.000000e-05\n",
+       "state                2.220446e-17\n",
+       "sloss                2.220446e-17\n",
+       "is_sm_ips_ports      0.000000e+00\n",
+       "dwin                 0.000000e+00\n",
+       "is_ftp_login         0.000000e+00\n",
+       "swin                -4.000000e-05\n",
+       "djit                -4.000000e-05\n",
+       "ct_src_dport_ltm    -1.200000e-04\n",
+       "ct_flw_http_mthd    -2.000000e-04\n",
+       "smean               -2.400000e-04\n",
+       "dpkts               -3.600000e-04\n",
+       "sinpkt              -4.400000e-04\n",
+       "dmean               -1.040000e-03\n",
+       "response_body_len   -1.040000e-03\n",
+       "dload               -1.200000e-03\n",
+       "sload               -1.280000e-03\n",
+       "ackdat              -1.320000e-03\n",
+       "rate                -1.600000e-03\n",
+       "ct_state_ttl        -1.960000e-03\n",
+       "dur                 -2.280000e-03\n",
+       "stcpb               -2.280000e-03\n",
+       "synack              -2.680000e-03\n",
+       "dinpkt              -3.000000e-03\n",
+       "dloss               -3.000000e-03\n",
+       "tcprtt              -3.200000e-03\n",
+       "ct_dst_sport_ltm    -3.520000e-03\n",
+       "ct_srv_src          -5.160000e-03\n",
+       "service             -6.040000e-03\n",
+       "sbytes              -6.240000e-03\n",
+       "dbytes              -6.320000e-03\n",
+       "ct_srv_dst          -7.600000e-03\n",
+       "Name: importance, dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importances['importance'].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "60313668",
+   "id": "e4dfe786",
    "metadata": {},
    "outputs": [],
    "source": []
